# fib-payment-rs

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs
src/client/: fib_client.rs  mod.rs
src/config/: mod.rs  settings.rs
src/error/: mod.rs  types.rs
src/http/: client.rs  mod.rs
src/models/: mod.rs  payment.rs  token.rs
src/repository/: mod.rs  payment.rs
