[package]
name = "fib-payment-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for FIB Payments API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
async-trait = "0.1"
dotenv = "0.15"
backoff = { version = "0.4", features = ["tokio"] }
serde_urlencoded = "0.7.1"
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.5.4"
